--- a/blueberry/core/_variables.scss
+++ b/blueberry/core/_variables.scss
@@ -23,3 +23,11 @@ $navbar-text-color  : #ffffff !default;
 // Fonts
 $font-family-sans   : null !default;
 $font-family-mono   : monospace !default;
+
+// Controls constants
+$control-color-border            : mix(#fff, $color-primary, 70%) !default;
+$control-color-background-normal : #fff !default;
+$control-color-background-locked : mix(#fff, $color-primary, 95%) !default;
+$control-color-background-hover  : mix(#fff, $color-primary, 90%) !default;
+$control-border-radius           : 5px !default;
+$control-transition-time         : .2s !default;
