--- a/bootstrap/_reddit.scss
+++ b/bootstrap/_reddit.scss
@@ -97,10 +97,14 @@
                         }
 
                         &::after {
-                            content: '⮟';
-                            padding: 0 0 0 1rem;
+                            content: '';
+                            margin: 0 0 .1rem 1rem;
                             text-decoration: none;
                             display: inline-block;
+                            background: $themePrimary;
+                            width: 1rem;
+                            height: 1rem;
+                            clip-path: polygon(100% 50%, 50% 100%, 0% 50%);
                         }
 
                         position: absolute;
